--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,8 +10,14 @@ androidGradlePlugin = "8.4.2"
 hilt = "2.51.1"
 androidxComposeBom = "2025.04.00"
 androidxLifecycle = "2.8.7"
+# TO DELETE
 androidxNavigationCompose = "2.8.9"
 androidxHiltNavigationCompose = "1.2.0"
+# NEW
+nav3Core = "1.0.0"
+lifecycleViewmodelNav3 = "2.10.0-rc01"
+androidxHiltLifecycleViewModelCompose = "1.3.0"
+# END
 jsoup = "1.17.2"
 retrofit = "2.11.0"
 moshi = "1.15.1"
@@ -49,8 +55,15 @@ androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscree
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "androidxComposeBom" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref="material3" }
 androidx-material3-adaptive-navigation-suite-android = { group = "androidx.compose.material3", name = "material3-adaptive-navigation-suite-android", version.ref = "material3AdaptiveNavigationSuiteAndroid" }
+# NEW
+androidx-navigation3-runtime = { module = "androidx.navigation3:navigation3-runtime", version.ref = "nav3Core" }
+androidx-navigation3-ui = { module = "androidx.navigation3:navigation3-ui", version.ref = "nav3Core" }
+androidx-lifecycle-viewmodel-navigation3 = { module = "androidx.lifecycle:lifecycle-viewmodel-navigation3", version.ref = "lifecycleViewmodelNav3" }
+androidx-hilt-lifecycle-viewModelCompose = { group = "androidx.hilt", name = "hilt-lifecycle-viewmodel-compose", version.ref = "androidxHiltLifecycleViewModelCompose" }
+# TO DELETE
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidxNavigationCompose" }
 androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "androidxHiltNavigationCompose" }
+# END
 androidx-ui-tooling-preview-android = { group = "androidx.compose.ui", name = "ui-tooling-preview-android", version.ref = "uiTooling" }
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 jsoup = { group = "org.jsoup", name = "jsoup", version.ref = "jsoup" }
